# nyra

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
public/: site.webmanifest
src/: App.vue  main.rs  main.ts
src/assets/: style.css
src/core/: axum.rs  bootstrap.rs  logs.rs  mod.rs  router.rs
ui/: App.vue  main.ts
ui/assets/: style.css
