[package]
name = "nyra"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
get_if_addrs = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tower-http = { version = "0.6", features = ["fs"] }
chrono = "0.4.41"
